--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: c(
     person("Tui", "Nolan",
 	   email = "tui.nolan@mrc-bsu.cam.ac.uk",
-           role = c("aut", "cre")),
+           role = c("aut")),
     person("Helene", "Ruffieux",
            email = "helene.ruffieux@mrc-bsu.cam.ac.uk",
            role = c("aut", "cre")))
@@ -17,3 +17,4 @@ Depends:
 License: GPL (>= 3) | file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.1
