--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(generate_fpca_data)
 export(plot_scores)
 export(run_mfvb_fpca)
 export(run_vmp_fpca)
+export(trapint)
 import(lattice)
 importFrom(MASS,mvrnorm)
 importFrom(ellipse,ellipse)
