Cleaned list of arguments of main functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(cprod)
 export(display_eigenfunctions)
 export(display_fit)
 export(display_fit_list)
+export(flip_sign)
 export(generate_fpca_data)
+export(get_grid_objects)
 export(plot_scores)
 export(run_mfvb_fpca)
+export(run_mfvb_fpca_deprecated)
 export(run_vmp_fpca)
+export(run_vmp_fpca_deprecated)
 export(trapint)
 import(lattice)
 importFrom(MASS,mvrnorm)
