Added subject and variable names and added set_hyper function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_grid_objects)
 export(plot_scores)
 export(run_mfvb_fpca)
 export(run_vmp_fpca)
+export(set_hyper)
 export(trapint)
 import(lattice)
 importFrom(MASS,mvrnorm)
