Added function for post-processing rstan code.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(mu_func)
 export(run_mfvb_fpca)
 export(run_vmp_fpca)
 export(set_hyper)
+export(summarise_mcmc_multivariate)
 export(trapint)
 import(lattice)
 importFrom(MASS,mvrnorm)
