--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,15 +3,14 @@ Type: Package
 Title: Bayesian Functional Principal Component Analysis Suite 
 Version: 0.1.0
 Authors@R: c(
-    person("Tui", "Nolan",
-	   email = "tui.nolan@mrc-bsu.cam.ac.uk",
-           role = c("aut")),
     person("Helene", "Ruffieux",
            email = "helene.ruffieux@mrc-bsu.cam.ac.uk",
-           role = c("aut", "cre")))
+           role = c("aut", "cre")),
+    person("Tui", "Nolan",
+	   email = "tui.nolan@mrc-bsu.cam.ac.uk",
+           role = c("aut")))
 Description: Suite of functions to perform functional principal component
-    analysis (FPCA) in the Bayesian setting using variational message
-    passing inference.
+    analysis (FPCA) in the Bayesian setting using variational inference.
 Depends:
     R (>= 4.0.0)
 License: GPL (>= 3) | file LICENSE
