Implemented model selection for number of splines K.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     MASS,
     matrixcalc,
     pracma,
-    splines
+    splines,
+    parallel
 Suggests: 
     rstan
 RoxygenNote: 7.2.3
