--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(generate_fpca_data)
 export(get_grid_objects)
 export(mu_func)
 export(run_mfvb_fpca)
+export(run_mfvb_fpca_model_choice)
 export(run_vmp_fpca)
+export(run_vmp_fpca_model_choice)
 export(set_hyper)
 export(trapint)
 import(lattice)
@@ -33,4 +35,5 @@ importFrom(stats,rbinom)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(stats,var)
 importFrom(utils,read.table)
