Added function to select L and display scree plot.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,14 +13,18 @@ export(run_mfvb_fpca)
 export(run_mfvb_fpca_model_choice)
 export(run_vmp_fpca)
 export(run_vmp_fpca_model_choice)
+export(select_L)
 export(set_hyper)
 export(trapint)
 import(lattice)
 importFrom(MASS,mvrnorm)
 importFrom(ellipse,ellipse)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,par)
+importFrom(graphics,points)
 importFrom(magic,adiag)
 importFrom(matrixcalc,duplication.matrix)
 importFrom(pracma,blkdiag)
